# jupytercad-mcp

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: check_test_all.yaml
.github/workflows/: check_test_all.yaml
examples/: openai_agents_client.py
src/jupytercad_mcp/: __init__.py  server.py
tests/: test_server.py
