[project]
name = "jupytercad-mcp"
version = "0.1.0"
authors = [{ name = "asmith26"}]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
keywords = ["jupytercad", "jupyterlab", "mcp", "computer-aided design", "cad"]
dependencies = []

[project.urls]
Homepage = "https://github.com/asmith26/jupytercad-mcp"

[project.scripts]
jupytercad-mcp = "jupytercad_mcp.server:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
